--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #e5e5e5;
+  font-size: 19px;
 }
 
 code {
